优化模组管理页面模组信息的展示方式 (#4621)